# musclemimic_models

./: .gitignore  NOTICE  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
model/arm/: myoarm_bimanual.xml
model/arm/assets/: myoarm_bimanual_assets.xml
model/leg/assets/: myolegs_muscle.xml
model/torso/assets/: myotorso_assets.xml
musclemimic_models/: __init__.py
musclemimic_models/model/: __init__.py
musclemimic_models/model/arm/: myoarm_bimanual.xml
musclemimic_models/model/arm/assets/: myoarm_bimanual_assets.xml  myoarm_bimanual_body.xml
musclemimic_models/model/body/: myofullbody.xml
musclemimic_models/model/head/assets/: myohead_rigid_chain.xml  myohead_simple_assets.xml
musclemimic_models/model/leg/assets/: myolegs_assets.xml  myolegs_chain.xml  myolegs_tendon.xml
musclemimic_models/model/scene/: musclemimic_scene.xml
musclemimic_models/model/torso/assets/: myotorso_assets.xml  myotorso_bimanual_chain.xml
tests/: debug_muscle_bimanual.py  debug_muscle_leg.py  debug_muscle_torso.py  debug_symmetry.py  muscle_analysis_utils.py
