[project]
name = "musclemimic-models"
version = "1.0.4"
description = "MuscleMimic Models"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "MuscleMimic Team" }
]
keywords = ["musculoskeletal", "mujoco", "biomechanics", "muscle", "fullbody"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mujoco>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.10.8",
    "scipy>=1.17.0",
]

[project.urls]
Homepage = "https://github.com/amathislab/musclemimic_models"
Repository = "https://github.com/amathislab/musclemimic_models"
Issues = "https://github.com/amathislab/musclemimic_models/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["musclemimic_models*"]

[tool.setuptools.package-data]
musclemimic_models = ["**/*.xml", "**/*.stl", "**/*.png"]
